change logic from service to domain